Z-index fix

--- a/src/sass/jquery.amaran.sass
+++ b/src/sass/jquery.amaran.sass
@@ -1,7 +1,7 @@
 @charset "UTF-8"
 .amaran-wrapper *
     box-sizing: border-box
-    
+    z-index: 9999
 .amaran-wrapper
     position: fixed
     
